# Cruise-Revenue-Occupancy-Analytics-Platform

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
dashboards/powerbi/: data_source_mapping.md  finance_scorecard_blueprint.md
dashboards/tableau/: data_source_mapping.md  executive_scorecard_blueprint.md
dbt_cruise_analytics/: dbt_project.yml  profiles.example.yml
dbt_cruise_analytics/analyses/: revenue_waterfall_analysis.sql
dbt_cruise_analytics/models/: exposures.yml
dbt_cruise_analytics/snapshots/: snapshot_reservation_status.sql
dbt_cruise_analytics/tests/: assert_aop_target_coverage.sql  assert_cancelled_has_cancellation_date.sql  assert_final_payment_before_departure.sql  assert_occupancy_rate_le_1.sql  assert_passenger_count_positive.sql  assert_recognized_revenue_nonnegative.sql  assert_return_after_departure.sql  campaign_roas_nonnegative.sql  deferred_revenue_nonnegative.sql  executive_aop_targets_positive.sql  occupancy_gap_between_0_and_1.sql  occupancy_rate_not_negative.sql  occupancy_rate_not_over_100.sql  recognized_revenue_nonnegative.sql
docs/: ai_tooling_case_study.md  architecture.md  data_dictionary.md  hiring_manager_walkthrough.md  implementation_notes.md  metric_definitions.md
scripts/: export_bi_extracts.py  generate_dashboard_screenshots.py  generate_synthetic_cruise_data.py  local_duckdb_smoke_build.py  validate_generated_data.py
snowflake/: deployment_guide.md
streamlit_app/: README.md  app.py
tests/: test_synthetic_data_generation.py
(+43 files in other folders)
